@@ -1,3 +1,7 @@
+Adafruit's Arduino NINA-W102 firmware 1.6.1 - 2020.04.29
+
+* Updated to use standard SPI3/VSPI pins on ESP32
+
 Adafruit's Arduino NINA-W102 firmware 1.6.0 - 2019.12.28
 
 * Updated to build with ESP-IDF 3.3.1
